// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-data-type should create a data type 1`] = `
{
  "content": [],
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "message": "Data type created successfully",
  },
}
`;

exports[`create-data-type should create a data type 2`] = `
{
  "editorUiAlias": "Umb.PropertyEditorUi.TextBox",
  "flags": [],
  "hasChildren": false,
  "id": "00000000-0000-0000-0000-000000000000",
  "isDeletable": true,
  "isFolder": false,
  "name": "_Test DataType Created",
  "parent": null,
}
`;

exports[`create-data-type should create a data type with parent folder 1`] = `
{
  "content": [],
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "message": "Data type created successfully",
  },
}
`;

exports[`create-data-type should create a data type with parent folder 2`] = `
{
  "editorUiAlias": "Umb.PropertyEditorUi.TextBox",
  "flags": [],
  "hasChildren": false,
  "id": "00000000-0000-0000-0000-000000000000",
  "isDeletable": true,
  "isFolder": false,
  "name": "_Test DataType With Parent",
  "parent": {
    "id": "00000000-0000-0000-0000-000000000000",
  },
}
`;
